op/output3.txt
   Compiling binrw_derive v0.15.0
   Compiling binrw v0.15.0
   Compiling lnk v0.6.3
   Compiling op v0.1.0 (C:\Users\adars\Desktop\Project\op-cli\op)
warning: unused import: `std::time::SystemTime`
  --> src\discovery.rs:55:5
   |
55 | use std::time::SystemTime;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0061]: this function takes 2 arguments but 1 argument was supplied
   --> src\discovery.rs:33:9
    |
 33 |         ShellLink::open(&path_buf)
    |         ^^^^^^^^^^^^^^^----------- argument #2 of type `&'static encoding_rs::Encoding` is missing
    |
note: associated function defined here
   --> C:\Users\adars\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\lnk-0.6.3\src\lib.rs:324:12
    |
324 |     pub fn open<P: AsRef<std::path::Path>>(
    |            ^^^^
help: provide the argument
    |
 33 |         ShellLink::open(&path_buf, /* &'static encoding_rs::Encoding */)
    |                                  ++++++++++++++++++++++++++++++++++++++

error[E0599]: no method named `relative_path` found for struct `ShellLink` in the current scope
   --> src\discovery.rs:39:38
    |
 39 |             if let Some(path) = link.relative_path() {
    |                                      ^^^^^^^^^^^^^
    |
help: there is a method `set_relative_path` with a similar name, but with different arguments
   --> C:\Users\adars\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\lnk-0.6.3\src\lib.rs:457:5
    |
457 |     pub fn set_relative_path(&mut self, relative_path: Option<String>) {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0282]: type annotations needed
  --> src\discovery.rs:40:29
   |
40 |                 return Some(path.to_string());
   |                             ^^^^ cannot infer type

error[E0599]: no method named `working_dir` found for struct `ShellLink` in the current scope
   --> src\discovery.rs:42:45
    |
 42 |             if let Some(working_dir) = link.working_dir() {
    |                                             ^^^^^^^^^^^
    |
help: there is a method `set_working_dir` with a similar name, but with different arguments
   --> C:\Users\adars\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\lnk-0.6.3\src\lib.rs:464:5
    |
464 |     pub fn set_working_dir(&mut self, working_dir: Option<String>) {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0282]: type annotations needed
  --> src\discovery.rs:46:30
   |
46 |                  return Some(working_dir.to_string());
   |                              ^^^^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0061, E0282, E0599.
For more information about an error, try `rustc --explain E0061`.
warning: `op` (bin "op") generated 1 warning
error: could not compile `op` (bin "op") due to 5 previous errors; 1 warning emitted
